# Makefile for wmnd

# final executables
bin_PROGRAMS = wmnd

# sources
wmnd_SOURCES = \
	bits.c bits.h \
	cfgdata.c cfgdata.h \
	display.c display.h \
	drivers.c drivers.h \
	list.c list.h \
	master.xpm \
	misc.c misc.h \
	ppp_defs.h pppio.h \
	messages.c messages.h \
	wmnd.c wmnd.h


# extra files
EXTRA_DIST = README.master.xpm

